# docs/swagger.yaml
@@ -836,12 +836,12 @@ paths:
       summary: 服务统计
       tags:
       - 首页大盘
-  /dashboard/panel_group_date:
+  /dashboard/panel_group_data:
     get:
       consumes:
       - application/json
       description: 指标统计
-      operationId: /dashboard/panel_group_date
+      operationId: /dashboard/panel_group_data
       produces:
       - application/json
       responses:
